--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {background-color:black;font-family: Arial;color:white;}
 h1{color:gray;font-family:verdana;}
-.maindiv{background-color:white;color:black;width:300px;padding:20px;border-radius:25px;align:center;}
+.maindiv{background-color:white;color:black;width:300px;padding:20px;border-radius:25px;vertical-align: center;}
 
 
