--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {background-color:black;font-family: Arial;color:white;}
 h1{color:gray;font-family:verdana;}
-div.maindiv{background-color:white;color:black;width:300px;margin:auto;padding:20px;border-radius:25px;margin: auto;width: 60%;border: 5px ;padding: 10px;}
+div.maindiv{background-color:white;color:black;width:300px;margin:auto;padding:20px;border-radius:25px;margin: auto;border: 5px ;padding: 10px;}
 
 
